--- a/os/sysctl.conf
+++ b/os/sysctl.conf
@@ -2,5 +2,15 @@ net.bridge.bridge-nf-call-iptables  = 1
 net.bridge.bridge-nf-call-ip6tables = 1
 net.ipv4.ip_forward                 = 1
 net.ipv6.ip_forward                 = 1
+net.ipv4.conf.all.forwarding        = 1
+net.ipv6.conf.all.forwarding        = 1
 user.max_pid_namespaces             = 1048576
 user.max_user_namespaces            = 1048576
+
+#Cilium
+net.ipv4.conf.lxc*.rp_filter = 0
+
+#kubelet
+vm.overcommit_memory=1
+kernel.panic=10
+kernel.panic_on_oops=1
